@@ -11,6 +11,7 @@
 * Adds support for the Navigation blocks, so that protected items are hidden from users who should not see them.
 * Added filter to block_core_navigation_render_inner_blocks.
 * Added filter to render_block and pre_render_block.
+* Fixed a PHP Deprecated notice on version_compare() when Groups is newly installed (PHP 8.x compatibility).
 
 = 2.19.0 =
 * WordPress 6.4 compatible.
